--- a/src/blocks/cert/cert.scss
+++ b/src/blocks/cert/cert.scss
@@ -8,13 +8,21 @@
 
   &__item {
     position: relative;
-    display: grid;
-    grid-template-columns: 30% 1fr;
-    margin-bottom: 40px;
-    gap: 0 20px;
+    margin-bottom: 20px;
 
     &:last-child {
       margin-bottom: 0;
+    }
+
+    @media (min-width: 600px) {
+      display: grid;
+      grid-template-columns: 30% 1fr;
+      margin-bottom: 40px;
+      gap: 0 20px;
+    }
+
+    @media (min-width: $screen-xl) {
+      grid-template-columns: 20% 1fr;
     }
 
     // @media (min-width: $screen-lg) {
@@ -30,22 +38,20 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 3;
-    width: auto;
-    height: 194px;
+    display: block;
+    width: 50%;
+    height: 210px;
+    margin-right: 20px;
     margin-bottom: 20px;
     border-radius: 8px;
     overflow: hidden;
 
     @media (min-width: 600px) {
-      height: 300px;
-    }
-
-    @media (min-width: $screen-md) {
-      height: 400px;
+      width: auto;
+      height: 210px;
     }
 
     @media (min-width: $screen-lg) {
-      height: 184px;
       margin-right: 32px;
       margin-bottom: 0;
       grid-column-start: 1;
@@ -54,10 +60,15 @@
       grid-row-end: 6;
     }
 
+    @media (min-width: $screen-xxl) {
+      height: 300px;
+    }
+
     img {
       height: 100%;
       width: 100%;
       object-fit: contain;
+      object-position: left top;
     }
   }
 
@@ -68,6 +79,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     @apply text-xl;
+    font-weight: 700;
 
 
     a {
