--- a/src/blocks/compare-card/compare-card.scss
+++ b/src/blocks/compare-card/compare-card.scss
@@ -15,7 +15,7 @@
   }
 
   &__title {
-    min-height: 60px;
+    min-height: (2 * 30px) + 20px;
     margin-bottom: 20px;
     padding: 20px 20px 0;
     padding-bottom: 0;
@@ -43,11 +43,9 @@
     flex-grow: 1;
 
     @media (min-width: $screen-md) {
-      margin-bottom: 40px;
       padding: 0 40px 40px;
       font-size: 24px;
       line-height: 32px;
-      text-align: center;
     }
 
     @media (min-width: $screen-lg) {
@@ -141,13 +139,13 @@
         content: '';
         position: absolute;
         left: 0;
-        top: 50%;
+        top: 20px / 2;
         width: 20px;
         height: 20px;
         border-radius: 50%;
         background-repeat: no-repeat;
         background-position: center;
-        transform: translateY(-50%);
+        // transform: translateY(-50%);
       }
     }
 
@@ -155,7 +153,7 @@
     align-self: start;
     margin-top: auto;
     @apply text-sm;
-    min-height: 48px;
+    min-height: 3 * 24px;
 
     @media (min-width: $screen-md) {
     }
