--- a/src/blocks/list-num/list-num.scss
+++ b/src/blocks/list-num/list-num.scss
@@ -9,11 +9,12 @@
   counter-reset: num;
   margin: 0;
   padding: 0 0 0 10px;
+  list-style: none !important;
 
   li {
     position: relative;
-    padding-left: 21px;
-    margin-bottom: 20px;
+    padding-left: 21px !important;
+    margin-bottom: 20px !important;
 
     &::before {
       content: counter(num)'.';
