--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -1003,6 +1003,15 @@ body {}
   }
 }
 
+.img-contain {
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: top;
+  }
+}
+
 .hide-text {
   @include hide-text;
 }
@@ -1013,6 +1022,11 @@ code {
   tab-size: 2;
 }
 
+ul[class*=columns] li {
+  overflow: hidden; /* fix for Firefox */
+  break-inside: avoid-column;
+  -webkit-column-break-inside: avoid;
+}
 
 
 @include sprites($spritesheet-sprites);
