--- a/src/blocks/product-main/product-main.scss
+++ b/src/blocks/product-main/product-main.scss
@@ -56,6 +56,7 @@
 
   &__slider-wrapper {
     margin-bottom: auto;
+    flex-grow: 1;
     // height: 100%;
   }
 
@@ -79,6 +80,7 @@
 
     &:first-child {
       display: inline-block;
+      width: 100%;
     }
 
     &.tns-item {
