--- a/src/blocks/cart-product/cart-product.scss
+++ b/src/blocks/cart-product/cart-product.scss
@@ -18,6 +18,7 @@
     grid-template-rows: 70px 42px auto 1fr auto auto;
     border: 1px solid $tw-gray-200;
     border-radius: 10px;
+    overflow: hidden;
   }
 
   @media (min-width: $screen-xxl) {
@@ -156,9 +157,13 @@
 
     @media (min-width: $screen-lg) {
       grid-row-start: 1;
-      grid-row-end: 6;
+      grid-row-end: 4;
       grid-column-start: 2;
       grid-column-end: 3;
+    }
+
+    @media (min-width: $screen-xl) {
+      margin-right: 20px;
     }
   }
 
