--- a/src/pages/addClasses.pug
+++ b/src/pages/addClasses.pug
@@ -1,5 +1,5 @@
 .opacity-100
-<div class='!opacity-100 lg_!hidden !text-black !hidden'></div>
+<div class='!opacity-100 lg_!hidden !text-black !hidden !container !transform !transition'></div>
 .w-200px
 .w-300px
 .w-400px
@@ -7,4 +7,5 @@
 .w-600px
 .grid-cols-2-300px
 .gap-20px
-
+.uppercase
+.self-start
