--- a/src/pages/faq.pug
+++ b/src/pages/faq.pug
@@ -149,7 +149,7 @@ block content
             .container
               .product-catalog
                 h2.section__title.mb-0.mt-0 Рекомендуем <span class='hidden lg_inline'>обратить внимание на аппараты</span>
-                +btn('Все аппараты','simple')(class="pt-3px")
+                +btn('Все аппараты','simple')(href=" /catalog/laser-therapy-devices/"  class="pt-3px")
                 .product-list.mt-20px
                   +product-card(
                     {
