--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -288,7 +288,7 @@ block content
           .section__content.section__container.container
             .product-catalog
               h2.section__title.mb-0.mt-0.xxl_mb-7px Каталог аппаратов
-              +btn('Все аппараты','simple')(class="pt-3px mb-20px")
+              +btn('Все аппараты','simple')(href=" /catalog/laser-therapy-devices/" class="pt-3px mb-20px")
               .product-list
                 +product-card(
                   {
