--- a/src/blocks/article-preview/article-preview.scss
+++ b/src/blocks/article-preview/article-preview.scss
@@ -9,6 +9,10 @@
   $items2-width: 700px;
 
   &.slider__item {
+    display: inline-flex !important;
+  }
+
+  &.slider__item {
     flex-shrink: 0;
 
     .index & {
@@ -82,6 +86,7 @@
   }
 
   &__inner {
+    width: 100%;
     border-radius: 4px;
     border: 1px solid $tw-gray-200;
     overflow: hidden;
@@ -116,6 +121,10 @@
 
     .index & {
       flex-grow: 1;
+    }
+
+    @at-root a#{&} {
+      display: block;
     }
 
     #{$block-name}--inner & {
@@ -166,6 +175,11 @@
 
   &__text {
     padding: 20px 30px 30px;
+    flex-grow: 1;
+
+    .xxl_w-736px & {
+      flex-grow: 0;
+    }
 
     .index & {
       display: flex;
@@ -174,10 +188,9 @@
       align-items: start;
     }
 
-    // #{$block-name}--inner & {
-    //   padding: 20px 0;
+    // .section--textpage & {
+    //   flex-grow: 1;
     // }
-
 
     @media (min-width: $items2-width) {
       display: flex;
