--- a/src/blocks/btn/btn.scss
+++ b/src/blocks/btn/btn.scss
@@ -280,7 +280,7 @@
       width: 6px;
       height: 4px;
       margin-left: auto;
-      background-image: url(../img/angle-down.svg);
+      background-image: url('#{$path-images}/angle-down.svg');
       background-repeat: no-repeat;
       transform: rotate(180deg);
       transition: transform .3s;
