--- a/src/blocks/compare-card/compare-card.scss
+++ b/src/blocks/compare-card/compare-card.scss
@@ -77,7 +77,6 @@
     @apply text-36px;
     font-weight: 700;
     color: $tw-black;
-    text-transform: uppercase;
   }
 
   &__price-unit {
@@ -113,7 +112,7 @@
       #{$block-name}__list-item {
         &::before {
           background-color: #F07474;
-          background-image: url('../img/minus.svg');
+          background-image: url('#{$path-images}/minus.svg');
         }
       }
     }
@@ -122,7 +121,7 @@
       #{$block-name}__list-item {
         &::before {
           background-color: #72CB6B;
-          background-image: url('../img/plus.svg');
+          background-image: url('#{$path-images}/plus.svg');
         }
       }
     }
@@ -153,7 +152,7 @@
     align-self: start;
     margin-top: auto;
     @apply text-sm;
-    min-height: 3 * 24px;
+    min-height: 2 * 24px;
 
     @media (min-width: $screen-md) {
     }
