--- a/src/blocks/compare-slider/compare-slider.scss
+++ b/src/blocks/compare-slider/compare-slider.scss
@@ -10,8 +10,6 @@
   &__after {
     position: relative;
     width: 100%;
-    border-radius: 8px;
-    overflow: hidden;
 
     @media (min-width: $screen-md) {
       display: flex;
@@ -48,6 +46,8 @@
     vertical-align: middle;
     width: 100%;
     height: 100%;
+    border-radius: 8px;
+    overflow: hidden;
 
     @media (min-width: $screen-md) {
       height: auto;
@@ -86,7 +86,7 @@
     border-radius: 50%;
     cursor: ew-resize;
     transform: translate(-50%);
-    background-image: url('../img/arrows-move-h-white.svg');
+    background-image: url('#{$path-images}/arrows-move-h-white.svg');
     background-repeat: no-repeat;
     background-position: center;
   }
