--- a/src/blocks/icon-svg/icon-svg.scss
+++ b/src/blocks/icon-svg/icon-svg.scss
@@ -12,36 +12,36 @@
   &--info-thin-yellow {
     width: 38px;
     height: 38px;
-    background-image: url('../img/info-thin-yellow-400.svg');
+    background-image: url('#{$path-images}/info-thin-yellow-400.svg');
   }
 
   &--info-thin-red {
     width: 38px;
     height: 38px;
-    background-image: url('../img/info-thin-red-500.svg');
+    background-image: url('#{$path-images}/info-thin-red-500.svg');
   }
 
   &--info-wallet-green {
     width: 48px;
     height: 48px;
-    background-image: url('../img/wallet-green-300.svg');
+    background-image: url('#{$path-images}/wallet-green-300.svg');
   }
 
   &--laser-green {
     width: 50px;
     height: 32px;
-    background-image: url('../img/laser-green-300.svg');
+    background-image: url('#{$path-images}/laser-green-300.svg');
   }
 
   &--laser-device {
     width: 46px;
     height: 47px;
-    background-image: url('../img/laser-device.svg');
+    background-image: url('#{$path-images}/laser-device.svg');
   }
 
   &--warning-slate {
     width: 45px;
     height: 43px;
-    background-image: url('../img/warning-gray-500.svg');
+    background-image: url('#{$path-images}/warning-gray-500.svg');
   }
 }
