--- a/src/blocks/slider-main/slider-main.scss
+++ b/src/blocks/slider-main/slider-main.scss
@@ -179,7 +179,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     cursor: pointer;
-    background-image: url('../img/play-btn.png');
+    background-image: url('#{$path-images}/play-btn.png');
     background-size: contain;
 
     @media (min-width: $screen-xl) {
@@ -188,7 +188,7 @@
     }
 
     video.playing~& {
-      background-image: url('../img/stop-btn.png');
+      background-image: url('#{$path-images}/stop-btn.png');
     }
 
     #{$block-name}__media--video-bg:hover & {
