--- a/src/blocks/structure/structure.scss
+++ b/src/blocks/structure/structure.scss
@@ -91,7 +91,7 @@
       content: '';
       width: 6px;
       height: 4px;
-      background-image: url('../img/angle-down.svg');
+      background-image: url('#{$path-images}/angle-down.svg');
       background-repeat: no-repeat;
       transform: rotate(180deg);
       transition: transform $transition-time;
