--- a/src/blocks/video-yt/video-yt.scss
+++ b/src/blocks/video-yt/video-yt.scss
@@ -14,6 +14,13 @@
     height: 349px;
   }
 
+  .reviews__item & {
+    width: 100%;
+
+    @media (min-width: $screen-lg) {
+      width: auto;
+    }
+  }
 
   &__poster {
     position: relative;
