--- a/src/pages/devices.pug
+++ b/src/pages/devices.pug
@@ -69,56 +69,58 @@ block content
           })
         .profile__main
           h2.mb-20px.mt-20px.text-xl.lg_text-2xl.lg_mt-0 Зарегистрированные аппараты
-          .data-table.data-table--one-line.data-table--devices.mb-20px
-            .data-table__th.row-start-1.lg_row-start-1(class='lg_!col-start-1')
-              span Модель
-            .data-table__th.row-start-2.lg_row-start-1(class='lg_!col-start-2')
-              span Серийный<br> номер
-            .data-table__th.row-start-3.lg_row-start-1(class='lg_!col-start-3')
-              span Дата окончания<br> гарантии
-            .data-table__th.row-start-4.lg_row-start-1(class='lg_!col-start-4')
-              span Проведенный ремонт<br> дата/гарантийный/платный
-            .data-table__td.row-start-1.lg_row-start-2(class='lg_!col-start-1')
-              span Рикта&nbsp;04/04
-            .data-table__td.row-start-2.lg_row-start-2(class='lg_!col-start-2')
-              span NP-131/2022
-            .data-table__td.row-start-3.lg_row-start-2(class='lg_!col-start-3')
-              span 24.02.2023
-            .data-table__td.row-start-4.lg_row-start-2(class='lg_!col-start-4')
-              span Гарантийный<br>14.01.2022
-            .data-table__td.row-start-1.lg_row-start-3(class='lg_!col-start-1')
-              span Рикта&nbsp;02/04
-            .data-table__td.row-start-2.lg_row-start-3(class='lg_!col-start-2')
-              span NP-131/2022
-            .data-table__td.row-start-3.lg_row-start-3(class='lg_!col-start-3')
-              span 24.02.2023
-            .data-table__td.row-start-4.lg_row-start-3(class='lg_!col-start-4')
-              span Платный<br>14.01.2022
-            .data-table__td.row-start-1.lg_row-start-4(class='lg_!col-start-1')
-              span Рикта&nbsp;04/04
-            .data-table__td.row-start-2.lg_row-start-4(class='lg_!col-start-2')
-              span NP-131/2022
-            .data-table__td.row-start-3.lg_row-start-4(class='lg_!col-start-3')
-              span 24.02.2023
-            .data-table__td.row-start-4.lg_row-start-4(class='lg_!col-start-4')
-              span Гарантийный<br>14.01.2022
-          // .data-table.data-table--one-line.data-table--devices
-          //   .data-table__th.row-start-1.lg_row-start-1(class='lg_!col-start-1')
-          //     span Модель
-          //   .data-table__th.row-start-2.lg_row-start-1(class='lg_!col-start-2')
-          //     span Серийный<br> номер
-          //   .data-table__th.row-start-3.lg_row-start-1(class='lg_!col-start-3')
-          //     span Дата окончания<br> гарантии
-          //   .data-table__th.row-start-4.lg_row-start-1(class='lg_!col-start-4')
-          //     span Проведенный ремонт<br> дата/гарантийный/платный
-            // .data-table__td.row-start-1.lg_row-start-2(class='lg_!col-start-1')
-            //   span Рикта&nbsp;02/04
-            // .data-table__td.row-start-2.lg_row-start-2(class='lg_!col-start-2')
-            //   span NP-131/2022
-            // .data-table__td.row-start-3.lg_row-start-2(class='lg_!col-start-3')
-            //   span 24.02.2023
-            // .data-table__td.row-start-4.lg_row-start-2(class='lg_!col-start-4')
-            //   span Платный<br>14.01.2022
+          .data-table__list
+            .data-table.data-table--one-line.data-table--devices.mb-20px
+              .data-table__th.row-start-1.lg_row-start-1(class='lg_!col-start-1')
+                span Модель
+              .data-table__th.row-start-2.lg_row-start-1(class='lg_!col-start-2')
+                span Серийный<br> номер
+              .data-table__th.row-start-3.lg_row-start-1(class='lg_!col-start-3')
+                span Дата окончания<br> гарантии
+              .data-table__th.row-start-4.lg_row-start-1(class='lg_!col-start-4')
+                span Проведенный ремонт<br> дата/гарантийный/платный
+              .data-table__td.row-start-1.lg_row-start-2(class='lg_!col-start-1')
+                span Рикта&nbsp;04/04
+              .data-table__td.row-start-2.lg_row-start-2(class='lg_!col-start-2')
+                span NP-131/2022
+              .data-table__td.row-start-3.lg_row-start-2(class='lg_!col-start-3')
+                span 24.02.2023
+              .data-table__td.row-start-4.lg_row-start-2(class='lg_!col-start-4')
+                span Гарантийный<br>14.01.2022
+            .data-table.data-table--one-line.data-table--devices.mb-20px
+              .data-table__th.row-start-1.lg_row-start-1(class='lg_!col-start-1')
+                span Модель
+              .data-table__th.row-start-2.lg_row-start-1(class='lg_!col-start-2')
+                span Серийный<br> номер
+              .data-table__th.row-start-3.lg_row-start-1(class='lg_!col-start-3')
+                span Дата окончания<br> гарантии
+              .data-table__th.row-start-4.lg_row-start-1(class='lg_!col-start-4')
+                span Проведенный ремонт<br> дата/гарантийный/платный
+              .data-table__td.row-start-1.lg_row-start-3(class='lg_!col-start-1')
+                span Рикта&nbsp;02/04
+              .data-table__td.row-start-2.lg_row-start-3(class='lg_!col-start-2')
+                span NP-131/2022
+              .data-table__td.row-start-3.lg_row-start-3(class='lg_!col-start-3')
+                span 24.02.2023
+              .data-table__td.row-start-4.lg_row-start-3(class='lg_!col-start-4')
+                span Платный<br>14.01.2022
+            .data-table.data-table--one-line.data-table--devices.mb-20px
+              .data-table__th.row-start-1.lg_row-start-1(class='lg_!col-start-1')
+                span Модель
+              .data-table__th.row-start-2.lg_row-start-1(class='lg_!col-start-2')
+                span Серийный<br> номер
+              .data-table__th.row-start-3.lg_row-start-1(class='lg_!col-start-3')
+                span Дата окончания<br> гарантии
+              .data-table__th.row-start-4.lg_row-start-1(class='lg_!col-start-4')
+                span Проведенный ремонт<br> дата/гарантийный/платный
+              .data-table__td.row-start-1.lg_row-start-4(class='lg_!col-start-1')
+                span Рикта&nbsp;04/04
+              .data-table__td.row-start-2.lg_row-start-4(class='lg_!col-start-2')
+                span NP-131/2022
+              .data-table__td.row-start-3.lg_row-start-4(class='lg_!col-start-3')
+                span 24.02.2023
+              .data-table__td.row-start-4.lg_row-start-4(class='lg_!col-start-4')
+                span Гарантийный<br>14.01.2022
           h2.mb-20px.mt-40px.text-xl.lg_text-2xl Зарегистрировать аппарат
           .form__wrapper
             form.form.relative.form--device
