--- a/src/scss/mixins/text-mixins.scss
+++ b/src/scss/mixins/text-mixins.scss
@@ -18,7 +18,7 @@
   top: 50%;
   width: 6px;
   height: 4px;
-  background-image: url('../img/angle-down.svg');
+  background-image: url('#{$path-images}/angle-down.svg');
   background-size: contain;
   transform: translateY(-50%);
   border: none;
